# TrtServer

./: .gitmodules  CMakeLists.txt  README.md  build.sh  env.sh  sampleBERT.cpp
bert/: BertFactory.cpp  BertFactory.h  BertQA.cpp  BertQA.h  OnnxParser.h  bert.cpp  driver.cpp  driver.h
helpers/: generate_dbg.py  test_tfs.py  test_trt.py  test_trt_qps.py  test_trt_txt.py
include/workflow/: CommScheduler.h  Communicator.h  DNSRoutine.h  EncodeStream.h  EndpointParams.h  ExecRequest.h  Executor.h  FileManager.h  HttpMessage.h  HttpUtil.h  LRUCache.h  MD5Util.h  Mutex.h  MySQLMessage.h  MySQLMessage.inl  MySQLResult.h  MySQLResult.inl  ProtocolMessage.h  RedisMessage.h  RouteManager.h  SleepRequest.h  StringUtil.h  SubTask.h  ThriftMessage.h  URIParser.h  UpstreamManager.h  WFAlgoTaskFactory.h  WFAlgoTaskFactory.inl  WFGlobal.h  WFHttpClient.h  WFHttpServer.h  WFOperator.h  WFRedisClient.h  WFRedisServer.h  WFServer.h  WFTask.h  WFTask.inl  WFTaskError.h  WFTaskFactory.h  WFTaskFactory.inl  (+9 more)
layers/: squad.h
onnx-tensorrt/: CMakeLists.txt  TensorOrWeights.hpp  builtin_op_importers.cpp
plugins/: embLayerNormPlugin.cu  embLayerNormPlugin.h  geluPlugin.cu  geluPlugin.h  qkvToContextPlugin.cu  qkvToContextPlugin.h  skipLayerNormPlugin.cu  skipLayerNormPlugin.h
proto/: compatible_server_req_res.pb.cc  compatible_server_req_res.pb.h  compatible_server_req_res.proto
server/: tutorial-13-http_gpu_server.cc  tutorial-13-http_gpu_server.cc_bak
util/: dataUtils.cpp
